public/stylesheets/main.css
html, body, p, th, td, li, dd, dt, pre .ui-dialog-buttonset{
    font: 1em Verdana, Arial, Helvetica, sans-serif;
    background-color: #666666;
    color: white;
}

.ui-dialog-content {
    background-color: #666666;
}

a {
    color: #AAAAAA;
}
tr.dashboardheader, th.dashboardheader {
    text-transform: inherit;
    font-weight: inherit;
    background-color: lavender;
    color: black;
    padding-left: 1em;
    padding-right: 1em;
}

tr {
    border-collapse: collapse;
}

td {
    border: 1px solid white;
    border-collapse: collapse;
    text-align: center;
}

table.table {
    border-radius: 3px;
    margin-right: 5%;
    margin-left: auto;
    width: 85%;
}

img.smallicon {
    width: 32px;
}

img.tinyicon {
    width: 16px;
}

.inline-icon {
    margin-right: 0.4em;
}

.error-text {
    color: darkred;
    font-weight: bold;
}

div.inline-dialog {
    border: 2px solid black;
    width: 30%;
    overflow:hidden;
    margin-top:5em;
    margin-left: auto;
    margin-right:auto;
    border-radius: 30px;
}

h2.inline-dialog-title {
    background-color: lavender;
    border-top-right-radius: 30px;
    padding: 0.1em;
    padding-left: 0.5em;
    border-top-left-radius: 30px;
}

h4 {
    margin: 0 0 0.5em 0.5em;
    display: inline;
}

span.breadcrumb {
    text-transform: capitalize;
    margin-bottom: 1em;
}

a.breadcrumb:link {
    text-decoration: none;
}

a.breadcrumb:hover {
    text-decoration: underline;
}

div.top-menu {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 2em;
    width: 30%;
    height: 1em;
}

.centered {
    margin-left: auto;
    margin-right: auto;
    width: 66%;
}

p.centered {
    text-align: center;
    width: 100%;
}

.login-icon{
    display:inherit;
    font-size: 40px;
    line-height: 50px;
    margin-left: auto;
    margin-right: auto;
    color:white;
    width: 50px;
    height: 50px;
    text-align: center;
    vertical-align: bottom;
}

.highlight {
    color: white;
}

.top-menu-spacer {
    margin-right: 1em;
}

/*
Search entries
 */
div.entry-view {
    border: 1px solid black;
    overflow: hidden;
    width: 140px;
    height: 150px;
    border-radius: 10px;
    background-color: white;
    display:inline-block;
    margin-right: 2em;
    margin-bottom: 2em;
    padding: 0.4em;
    padding-top: 0.2em;
}

.entry-title {
    margin-top: 0;
    margin-bottom: 0.2em;
    color: blue;
    font-size: 0.8em;
    font-weight: bold;
    background-color: inherit;
    margin-left:0.2em;
    margin-right:0.2em;
    height: 2.5em;
    overflow: hidden;
}

.entry-icon {
    color: #333333;
}

.entry-standard {
    background-color: lightgray !important;
}

.entry-deep-archive {
    background-color: #2676b5 !important;
    color: white !important;
}

.entry-shallow-archive {
    background-color: #cceeff !important;
}

.entry-gone-missing {
    background-color: darkred !important;
    color: white !important;
}

.entry-date {
    font-size: 0.6em;
    font-style: italic;
    background-color: inherit;
    margin-top:0;
}

.entry-thumbnail {
    color: inherit;
    margin-left: auto;
    margin-right: auto;
    overflow: hidden;
    margin-top: auto;
    margin-bottom: auto;
    height: 80px;
    display: block;
}

.entry-thumbnail-shadow {
    box-shadow: 2px 2px 6px black;
}

div.search-results-container {
    overflow-y: scroll;
    overflow-x: hidden;
    height: 80vh;
}



.suggestions-list {
    display: inline;
    alignment: center;
}

li.suggestions-list {
    background-color: lavender;
    border-radius: 10px;
    color: black;
    padding-top: 1px;
    padding-bottom: 1px;
    padding-left: 4px;
    padding-right: 4px;
    margin-right: 1em;
}

.form-errors {
    display: inline;
}

.clickable {
    cursor: pointer;
}

.title {
    background-color: lavender;
    color: black;
    font-weight: bold;
    font-size: 1.1em;
    padding: 0.1em;
    padding-left: 0.5em;
}

.ui-dialog {
    border: 2px solid white;
}

.ui-dialog-buttonset {
    margin-left: auto;
    margin-right:auto;
    width: 300px;
}

.ui-dialog-buttonset.button {
    margin-right: 1.5em;
}

.button-row {
    height: 1em;
    margin-right: 0.2em;
}

input.time-interval {
    margin-left: 1em;
    width: 3em;
}

.metadata-table {
    margin-top: 1em;
    border: none;
}

td.metadata-heading {
    font-weight: bold;
    border: none;
    text-align: right;
    padding-right: 0.8em;
}

td.metadata-entry {
    border: none;
    text-align: left;
}

.entry-details {
    float: right;
    height: 100%;
    width: 20%;
    overflow: hidden;
    border-left: 1px solid white;
}

.video-preview {
    width: 95%;
    margin-left: 1em;
    margin-right: 1em;
}

.entry-preview-switcher {
    width: 50%;
    display: block;
    margin-top:1em;
}

.image-button-enabled {
    padding-right: 0.4em;
    cursor: pointer;
}

.image-button-disabled {
    padding-right: 0.4em;
    color: lightgray;
}

hr.partial-divider {
    width: 70%
}

img.thumbnail-preview {
    width: 95%;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

p.information {
    text-align: center;
    font-style: italic;
    font-size: 0.8em;
}

.entry-jobs-list {
    margin-left: 1.5em;
}

.job-list {
    padding-left: 0.5em;
    list-style: none;
}

.job-list-entry {
    text-transform: capitalize;
}

.command-link {
    display: block;
    font-size: 0.8em;
    font-style: italic;
    cursor:pointer;
    text-decoration:underline;
}

.entry-view-selected {
    border-color: white !important;
    box-shadow: 3px 3px 5px black
}

div.selector-panel {
    width: 20%;
    height: 90vh;
    float: left;
    margin-right: 1em;
}

.login-info-container {
    float: right;
    position: absolute;
    top: 0;
    right: 0;
    padding: 0.4em;
    overflow: hidden;
    cursor:pointer;
}

.login-user-avatar {
    height: 24px;
    border-radius: 24px;
    vertical-align: middle;
}

.login-info-text {
    color: #AAAAAA;
    margin: 0.5em;
}

.collections-list {
    list-style: none;
    padding-left: 0.2em;
    padding-right: 0.2em;
}

.collection-list-item-disabled {
    color: #AAAAAA;
    font-style: italic;
}

.entry-details-lightboxes {
    margin-left: 1.5em;
}

span.entry-lightbox-banner {
    width: 100%;
    height: 16px;
    overflow: hidden;
    margin-left: 0.1em;
    margin-right: 0.1em;
}

.entry-lightbox-banner-entry-small {
     width: 16px;
     height: 16px;
     margin-right: 0.2em;
     border-radius: 16px;
 }

.entry-lightbox-banner-entry-large {
    width: 26px;
    height: 26px;
    margin-right: 0.4em;
    margin-bottom: 0.6em;
    border-radius: 32px;
}

p.no-spacing {
    margin-bottom: 0px;
    padding-bottom: 0px;
    margin-top: 0;
    padding-top: 0;
}

p.small {
    font-size: 0.7em;
}

p.large {
    font-size: 1.4em;
}

